snapshots/aws_traffic_in_igw_out_ngw/aws_configs/us-west-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-053bff9ba2e04087a",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-059fb561f35dae6f8"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-05858d33240d05c57",
     "NetworkAclId": "acl-0306c7bf668ac9513",
     "SubnetId": "subnet-058ca6500f9f77925"
    },
    {
     "NetworkAclAssociationId": "aclassoc-081914b25b85fe507",
     "NetworkAclId": "acl-0306c7bf668ac9513",
     "SubnetId": "subnet-070a65bef286a60db"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0306c7bf668ac9513",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-hr-west"
    }
   ],
   "VpcId": "vpc-059fb561f35dae6f8"
  }
 ]
}
