snapshots/aws_traffic_in_igw_out_ngw/aws_configs/us-west-1/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-023b0824dd46fb2d2",
   "GroupName": "terraform-20200625163237375000000001",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 443,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "HTTPS Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 443,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "sg-hr-west"
    }
   ],
   "VpcId": "vpc-059fb561f35dae6f8"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-0e946a8a9eefde37a",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-0e946a8a9eefde37a",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-059fb561f35dae6f8"
  }
 ]
}
